syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service EventService {
    rpc Send (Event) returns (Response) {
    }
    rpc SendHeader (EventHeader) returns (Response) {
    }
    rpc ResetDebug (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc Debug (google.protobuf.Empty) returns (DebugMessage) {
    }
}

message Event {
    EventHeader header = 1;
    EventBody body = 2;
}

message EventBody {
    repeated File files = 1;
}

message EventHeader {
    int32 version = 1;
    string device_code = 2;
    google.protobuf.Timestamp date = 3;
    enum EventType {
        UNKNOWN = 0;
        Event1 = 1;
        Event2 = 2;
        Event3 = 3;
        Event4 = 4;
        Event5 = 5;
    }
    EventType eventType = 4;
}

message File {
    int32 content_type = 1; // image, text or something
    google.protobuf.Timestamp time = 2;
    int32 category = 3;
    bytes data = 4;
}

message DebugMessage {
    string message = 1;
}

message Response {
}
